--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
+<meta charset="UTF-8" />
 <html>
   <head>
     <title>Serverless payments</title>
   </head>
-  <body>
-    <h1>A Serverless Payment example</h1>
+  <body style="height: 100vh">
+    <div
+      style="
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      "
+    >
+      <h1 style="text-align: center">💸💸 Serverless Payment example 💸💸</h1>
+    </div>
   </body>
 </html>
