Update redirect URLs

--- a/cancel.html
+++ b/cancel.html
@@ -21,7 +21,7 @@
         var backButton = document.getElementById("back-button");
 
         backButton.addEventListener("click", function () {
-          window.history.back();
+          window.location.href = "https://serverless-payments.netlify.app";
         });
       </script>
     </div>
